--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Monoton&display=swap" rel="stylesheet">
     <title>Classic Rock Trivia!</title>
 </head>
 <body>
@@ -28,6 +30,7 @@
                 <div class="col-md-6 text-center" id="game-timer"></div>
                 <div class="col-md-3"></div>
             </div>
+        </div> <br>
             <div class="question row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
@@ -41,8 +44,7 @@
                     <input type="checkbox" name="answer-one" value = "false"> Bold as Love <br>
                     <input type="checkbox" name="answer-one" value = "false"> Disraeli Gears <br>
                     <input type="checkbox" name="answer-one" value = "true"> Are You Experienced <br>
-                    <input type="checkbox" name="answer-one" value = "false"> Who's Next <br>
-
+                    <input type="checkbox" name="answer-one" value = "false"> Who's Next <br> <br> 
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -54,14 +56,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-two" value = "false"> Kansas <br>
                     <input type="checkbox" name="answer-two" value = "false"> AC/DC <br>
                     <input type="checkbox" name="answer-two" value = "false"> Pink Floyd <br>
-                    <input type="checkbox" name="answer-two" value = "true"> Boston <br>
-                    <br>
+                    <input type="checkbox" name="answer-two" value = "true"> Boston <br> <br> 
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -73,14 +74,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-three" value = "false"> Diaper David <br>
                     <input type="checkbox" name="answer-three" value = "true"> Diamond Dave <br>
                     <input type="checkbox" name="answer-three" value = "false"> Rusty Roth <br>
-                    <input type="checkbox" name="answer-three" value = "false"> Dynamite Dave <br>
-                    <br>
+                    <input type="checkbox" name="answer-three" value = "false"> Dynamite Dave <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -92,14 +92,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-four" value = "false"> Rush <br>
                     <input type="checkbox" name="answer-four" value = "true"> AC/DC <br>
                     <input type="checkbox" name="answer-four" value = "false"> Led Zeppelin<br>
-                    <input type="checkbox" name="answer-four" value = "false"> The Rolling Stones <br>
-                    <br>
+                    <input type="checkbox" name="answer-four" value = "false"> The Rolling Stones <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -111,14 +110,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-five" value = "true"> Rush <br>
                     <input type="checkbox" name="answer-five" value = "false"> AC/DC <br>
                     <input type="checkbox" name="answer-five" value = "false"> Led Zeppelin<br>
-                    <input type="checkbox" name="answer-five" value = "false"> The Rolling Stones <br>
-                    <br>
+                    <input type="checkbox" name="answer-five" value = "false"> The Rolling Stones <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -130,14 +128,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-six" value = "false"> Def Leppard <br>
                     <input type="checkbox" name="answer-six" value = "false"> Lynyrd Skynyrd <br>
                     <input type="checkbox" name="answer-six" value = "true"> Rush <br>
-                    <input type="checkbox" name="answer-six" value = "false"> Queen <br>
-                    <br>
+                    <input type="checkbox" name="answer-six" value = "false"> Queen <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -149,14 +146,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-seven" value = "false"> Grateful Dead  <br>
                     <input type="checkbox" name="answer-seven" value = "false"> The Beatles <br>
                     <input type="checkbox" name="answer-seven" value = "false"> The Doors <br>
-                    <input type="checkbox" name="answer-seven" value = "true"> Led Zeppelin <br>
-                    <br>
+                    <input type="checkbox" name="answer-seven" value = "true"> Led Zeppelin <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -168,14 +164,13 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="answer row"></div>
+            <div class="answer row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <input type="checkbox" name="answer-eight" value = "false"> Pink Floyd <br>
                     <input type="checkbox" name="answer-eight" value = "false"> Aerosmith <br>
                     <input type="checkbox" name="answer-eight" value = "true"> ZZ Top <br>
-                    <input type="checkbox" name="answer-eight" value = "false"> The Eagles <br>
-                    <br>
+                    <input type="checkbox" name="answer-eight" value = "false"> The Eagles <br> <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
