Created JavaScript file. Started working on the scoreboard and timer functionality.

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="col-md-6 text-center" id="game-over-screen"></div>
                 <p id="correct"> </p>
                 <p id="incorrect"> </p>
-                <p id="no asnwer"> </p>
+                <p id="no-answer"> </p>
                 </div>
                 <div class="col-md-3"></div>
             </div>
