--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Monoton&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Classic Rock Trivia!</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Monoton&display=swap" rel="stylesheet">
+    <!--<link rel="stylesheet" href="assets/style.css">-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
 </head>
 <body>
     <!--Page Header-->
@@ -28,10 +29,9 @@
         <div id="game-screen" style="display: none">
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6 text-center" id="game-timer"></div>
+                <div class="col-md-6 text-center" id="timer"></div>
                 <div class="col-md-3"></div>
             </div>
-        </div> <br>
             <div class="question row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
@@ -143,7 +143,7 @@
             <div class="question row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
-                    <p id="question-seven"> Which band named their first few albums "1, 2, 3, and 4? </p>
+                    <p id="question-seven"> Which band named their first few albums "I, II, III, and IV?" </p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -177,10 +177,10 @@
             </div>
         </div>
     <!--End of Game-->
-        <div id="game-over" style="display:none">
+        <div id="game-over" style="display: none">
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6 text-center" id="game-over-screen"></div>
+                <div class="col-md-6 text-center" id="game-over-screen">
                 <p id="correct"> </p>
                 <p id="incorrect"> </p>
                 <p id="no-answer"> </p>
