Completley changed JavaScript and parts of HTML. Now the JavaScript contains the actual quiz content.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
-    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <!--Header-->
     <div class="header">
         <h1 id="heading" class="text-center">Who Wants to be a Classic Rock Master?!</h1>
     </div>
-   <!--Actual Quiz content starts via JavaScript--> 
-<div class="quiz-container">
-  <div id="quiz"></div>
-</div>
-<button id="next">Next Question</button>
-<button id="submit">Submit Quiz</button>
-<div id="results"></div>
-<script type="text/javascript" src="assets/script.js"></script>
+    <!--<div class="container-fluid">
+        <div id="start-screen">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 text-center">
+                    <button id="start-button">Let's Play!</button>
+                </div>
+                <div class="col-md-2"></div>
+        </div>
+    </div>-->
+
+   <!--Actual Quiz content starts--> 
+    <div class="quiz-container">
+        <div id="quiz"></div>
+    </div>
+        <button id="previous">Previous Question</button>
+        <button id="next">Next Question</button>
+        <button id="submit">Submit Quiz</button>
+    <div id="results"></div>
+
+    <script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
