--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <!--Header-->
-    <div class="header">
-        <h1 id="heading" class="text-center">Who Wants to be a Classic Rock Master?!</h1>
+    <div class="header row">
+        <div class="col-sm-1"></div>
+        <h1 id="heading" class="col-sm-10 text-center">Who Wants to be a Classic Rock Master?!</h1>
+        <div class="col-sm-1"></div>
     </div>
-    <!--<div class="container-fluid">
+    
+    <!--Trying to get a start button to work without messing everything else up
+        <div class="container-fluid">
         <div id="start-screen">
             <div class="row">
                 <div class="col-md-2"></div>
@@ -26,13 +30,22 @@
     </div>-->
 
    <!--Actual Quiz content starts--> 
-    <div class="quiz-container">
-        <div id="quiz"></div>
+    <div class="quiz-container row">
+        <div class="col-sm-1"></div>
+        <div id="quiz" class="col-sm-10 text-center"></div>
+        <div class="col-sm-1"></div>
     </div>
-        <button id="previous">Previous Question</button>
-        <button id="next">Next Question</button>
-        <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
+    <div class="submit row"> 
+        <div class="col-sm"></div>
+        <div class="col-sm buttons"> 
+            <button id="previous">Previous Question</button>
+            <button id="next">Next Question</button>
+            <button id="submit">Submit Quiz</button>
+            <div id="countdown"></div>
+            <div id="results"></div>
+        </div>
+        <div class="col-sm"></div>
+    </div>  
 
     <script type="text/javascript" src="assets/script.js"></script>
 </body>
